[package]
name = "basecamptui"
version = "0.1.0"
edition = "2021"
description = "A terminal user interface (TUI) for Basecamp"
license = "MIT"
repository = "https://github.com/shikillo/basecamptui"
readme = "README.md"

[[bin]]
name = "basecamptui"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
dirs = "5"
